src/objects/Criteria_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Matrix_Field_Name__c</fullName>
        <description>This field is used to store Approval Matrix Field Api name.</description>
        <label>Approval Matrix Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <description>This field is used to store the condition for criteria.</description>
        <label>Condition</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>This field is used to store Object Field Api name.</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <description>This field is used to store type of the object field.</description>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>This field is used to store Object Api name.</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>This field is used to store order of the criteria record.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Criteria Matrix</label>
    <nameField>
        <label>Criteria Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criteria Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>